--- a/style/nav.css
+++ b/style/nav.css
@@ -1,3 +1,13 @@
+nav {
+    margin-top: 0px;
+}
+
+
+nav .header-nav img{
+    background-color: #fff;
+    border-radius: 5px;
+}
+
 .container-header {
     width: 90%;
     margin: auto
@@ -14,7 +24,7 @@
 
 .nav-header-desk ul li a {
     text-decoration: none;
-    color: rgb(70, 69, 69);
+    color: var(--color-secondary);
 }
 
 .nav-header-desk a:hover {
@@ -82,7 +92,10 @@
 
 .logo {
     text-align: center;
-    margin: 30px;
+    margin: 30px 0px;
+    padding: 10px 20px;
+    background-color:rgb(24, 24, 24);
+    margin-bottom: 1px;
 }
 
 #category {
@@ -103,12 +116,11 @@
 }
 
 .search-nav {
-    background-color: #BD0D10;
-    color: #fff;
     display: flex;
     justify-content: space-between;
     padding: 12px;
 }
+
 
 .search-nav div {
     display: flex;
@@ -120,6 +132,10 @@
 .search-nav div button {
     background-color: transparent;
     border: none;
+}
+
+.search-nav {
+    color: var(--color-primary);
 }
 
 .search-nav .mobile {
@@ -155,13 +171,9 @@
     transition: 0.7s;
 }
 
-.mobile-menu {
-    display: none;
-}
-
 .menu-search img{
     cursor: pointer;
-    display: none;
+   
 }
 
 
@@ -182,10 +194,87 @@
     width: 12px;
 }
 
-.search-bar {
-    opacity: 0.2;
-}
+
 
 .displaySearch {
     opacity: 1;
+}
+
+video {
+    width: 100%;
+    height: 80vh;
+}
+
+.menu-search img {
+    display: block;
+}
+
+.search-nav #menu {
+    display: block;
+}
+
+.nav-list{
+    position: absolute;
+    top: 9vh;
+    right: 0;
+    width: 100vw;
+    height: 100vh;
+    background: #093969;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    z-index: 1;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+} 
+ 
+.nav-list.active {
+    transform: translateX(0%);
+}
+
+.nav-list.active li {
+    margin-top: 10px;
+}
+
+.nav-list.active a{
+    color: #fff;
+    border-bottom: 1px solid #083159;
+    padding: 4px;
+    text-transform: uppercase;
+    font-size: small;
+    
+}
+
+.nav-list li:hover {
+    color: #d2deeb;
+}
+
+
+.list-search {
+    position: absolute;
+    top: 15vh;
+    right: 0;
+    left: 90px;
+    width: 50vw;
+    height: 100vh;
+    background: rgb(31, 31, 31);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+    z-index: 1;
+    transform: translateX(-210%);
+    transition: transform 0.3s ease-in;
+    padding: 20px;
+    color: #fff;
+}
+
+.list-search a {
+    border-bottom: 1px solid #083159;
+    padding: 4px;
+}
+
+.list-search.active {
+    transform: translateX(0%);
 }
