--- a/style/nav.css
+++ b/style/nav.css
@@ -195,15 +195,10 @@ nav .header-nav img{
 }
 
 
-
 .displaySearch {
     opacity: 1;
 }
 
-video {
-    width: 100%;
-    height: 80vh;
-}
 
 .menu-search img {
     display: block;
@@ -278,3 +273,14 @@ video {
 .list-search.active {
     transform: translateX(0%);
 }
+
+.banner {
+    display: flex;
+    justify-content: center;
+}
+
+.banner img {
+    width: 70%;
+    height: 50%;
+}
+
