--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@
     --color-primary: #bd0d10;
     --color-secondary: rgb(70, 69, 69);
     --color-tertiary: #c20307e1;
-    
+    --color-logo: #fd39039c;
 }
 
 body {
