--- a/style/noticiasmain.css
+++ b/style/noticiasmain.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,300&display=swap');
+
+.categorias {
+    font-family: 'Merriweather', serif;
+}
+
 .categorias h3 {
     margin-top: 30px;
 }
@@ -36,10 +42,14 @@
     font-weight: 700;
     line-height: 1.5;
     margin: 10px 0;
+    font-family: 'Merriweather', serif;
 }
 
 .noticias-title p {
     margin: 10px 0px;
+    font-family: 'Merriweather', serif;
+    line-height: 26px;
+    font-size: 0.875rem;
 }
 
 .categorias .noticias-title span {
